# papers

./: .gitignore
gensnroses/: Main.bib  Main.tex  results.md
gensnroses/code/: rose.cabal
gensnroses/code/src/: Rose.hs
gensnroses/santa/: .gitignore  README.md  santa.cabal  santa.lock-7.10.2
gensnroses/santa/main/: santa.hs
gensnroses/santa/src/Santa/: Extract.hs  Github.hs  Hackage.hs  Http.hs  Prelude.hs
gensnroses/section/: 01-Introduction.tex  02-Roses.tex  03-Details.tex  03-Ranges.tex  04-Effects.tex  04-Related.tex  04-Transformers.tex  05-Related.tex  05-Subterms.tex  06-Upgrade.tex  07-Related.tex  08-Conclusion.tex
